base html set up

--- a/two_and_five_inventory_manager/inventory/templates/inventory/index.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/index.html
@@ -1,1 +1,5 @@
-<h1>Two and Five Inventory Manager</h1>
+{% extends 'inventory/base.html' %}
+
+{% block content %}
+<h1>Two and Five Inventory Manager</h1> 
+{% endblock content %}
