--- a/two_and_five_inventory_manager/inventory/templates/inventory/base.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/base.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://bootswatch.com/5/darkly/bootstrap.min.css"
-    />
+    <link rel="stylesheet" href="https://bootswatch.com/5/darkly/bootstrap.min.css" />
     <title>Two and Five Inventory Manager</title>
-  </head>
-  <body>
-    {% block content %}  {% endblock content %}
+</head>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+<body>
+    <!-- This will display the nav html in the base html at all times. -->
+    {% include 'inventory/navigation.html' %}
+
+    {% block content %} {% endblock content %}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
