--- a/two_and_five_inventory_manager/inventory/templates/inventory/base.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/base.html
@@ -12,7 +12,8 @@
     <!-- This will display the nav html in the base html at all times. -->
     {% include 'inventory/navigation.html' %}
 
-    {% block content %} {% endblock content %}
+    {% block content %}
+    {% endblock content %}
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
