--- a/two_and_five_inventory_manager/inventory/templates/inventory/navigation.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/navigation.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar fixed-top navbar-expand-lg bg-primary" data-bs-theme="dark"">
     <div class="container-fluid text-wrap">
         <a class="navbar-brand" href="{% url 'index' %}">
             Two and Five Inventory Manager
