login.html set up and working. logout.html set up but not working, error 405

--- a/two_and_five_inventory_manager/inventory/templates/inventory/navigation.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/navigation.html
@@ -1,6 +1,6 @@
-<nav class="navbar fixed-top navbar-expand-lg bg-primary" data-bs-theme="dark"">
+<nav class="navbar sticky-top navbar-expand-lg bg-primary" data-bs-theme="dark">
     <div class="container-fluid text-wrap">
-        <a class="navbar-brand" href="{% url 'index' %}">
+        <a class="navbar-brand text-wrap" href="{% url 'index' %}">
             Two and Five Inventory Manager
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
