--- a/two_and_five_inventory_manager/inventory/templates/inventory/navigation.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/navigation.html
@@ -11,9 +11,22 @@
 
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
+                {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Sign In</a>
+                    <a class="nav-link" href="#">{{ user.username }}</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Sign Out</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Sign In</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+                </li>
+                {% endif %}
             </ul>
         </div>
     </div>
