index.html set up

--- a/two_and_five_inventory_manager/inventory/templates/inventory/index.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/index.html
@@ -1,5 +1,16 @@
 {% extends 'inventory/base.html' %}
 
 {% block content %}
-<h1>Two and Five Inventory Manager</h1> 
+<div>
+    <div class="row">
+        <div class="col-sm-11 col-md-5 mx-auto mt-5 px-4">
+            <h1 class="fw-light">Inventory Tracking and Management</h1>
+            <p class="fw-light">Receive real-time alerts for low stock and keep your inventory in check.
+            </p>
+            <div>
+                <a href="#" class="btn btn-primary">Get Started Now!</a>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
