Set up conditions to display items on the dashboard. Registered InventoryItem and Category to admin.py

--- a/two_and_five_inventory_manager/inventory/templates/inventory/dashboard.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/dashboard.html
@@ -19,6 +19,8 @@
                 </tr>
             </thead>
             <tbody>
+                <!-- If the no. of items = 0, this empty table displays. -->
+                {% if items|length == 0 %}
                 <tr>
                     <th scope="row">-</th>
                     <td>-</td>
@@ -27,6 +29,18 @@
                     <td></td>
                     <td></td>
                 </tr>
+                {% endif %}
+
+                {% for item in items %}
+                <tr>
+                    <th scope="row">{{ item.id }}</th>
+                    <td>{{ item.name }}</td>
+                    <td>{{ item.quantity }}</td>
+                    <td>{{ item.category.name }}</td>
+                    <td></td>
+                    <td></td>
+                </tr>
+                {% endfor %}
             </tbody>
         </table>
     </div>
