Dashboard link set up with required login condition.

--- a/two_and_five_inventory_manager/inventory/templates/inventory/index.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/index.html
@@ -8,7 +8,7 @@
             <p class="fw-light">Receive real-time alerts for low stock and keep your inventory in check.
             </p>
             <div>
-                <a href="#" class="btn btn-primary">Get Started Now!</a>
+                <a href="{% url 'dashboard' %}" class="btn btn-primary">Get Started Now!</a>
             </div>
         </div>
     </div>
