--- a/two_and_five_inventory_manager/inventory/templates/inventory/dashboard.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/dashboard.html
@@ -37,7 +37,9 @@
                     <td>{{ item.name }}</td>
                     <td>{{ item.quantity }}</td>
                     <td>{{ item.category.name }}</td>
-                    <td></td>
+                    <td>
+                        <a href="{% url 'edit-item' item.id %}" class="btn btn-outline-warning">Edit</a>
+                    </td>
                     <td></td>
                 </tr>
                 {% endfor %}
