--- a/two_and_five_inventory_manager/inventory/templates/inventory/dashboard.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/dashboard.html
@@ -40,7 +40,9 @@
                     <td>
                         <a href="{% url 'edit-item' item.id %}" class="btn btn-outline-warning">Edit</a>
                     </td>
-                    <td></td>
+                    <td>
+                        <a href="{% url 'delete-item' item.id %}" class="btn btn-outline-danger">Delete</a>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
