--- a/two_and_five_inventory_manager/inventory/templates/inventory/base.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/base.html
@@ -1,10 +1,28 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://bootswatch.com/5/darkly/bootstrap.min.css" />
+    <!-- Open Graph Meta Tags -->
+    <meta name="description"
+        content="Two and Five Inventory Manager is a comprehensive Django-based inventory management solution. Streamline your operations with features like real-time stock tracking, product information management, and advanced reporting. Optimize your inventory processes and make data-driven decisions with ease." />
+    <meta name="og:title" content="Raphael's Portfolio" />
+    <meta name="og:description"
+        content="Two and Five Inventory Manager is a comprehensive Django-based inventory management solution. Streamline your operations with features like real-time stock tracking, product information management, and advanced reporting. Optimize your inventory processes and make data-driven decisions with ease" />
+    <meta name="og:image" content="https://i.postimg.cc/KjJxqhVb/Inventory-Management-System.png" />
+    <meta name="og:type" content="website" />
+    <meta property="og:url" content="https://two-and-five-inventory-manager.onrender.com/" />
+    <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.min.css" />
+    <!-- Favicon Links -->
+    <link rel="icon" href="{% static 'favicon_io/favicon.ico' %}" type="image/x-icon">
+    <link rel="shortcut icon" href="{% static 'favicon_io/favicon.ico' %}" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon_io/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon_io/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon_io/favicon-16x16.png' %}">
+
     <title>Two and Five Inventory Manager</title>
 </head>
 
