--- a/two_and_five_inventory_manager/inventory/templates/inventory/dashboard.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/dashboard.html
@@ -5,7 +5,7 @@
 <div class="row mt-3">
     {% for message in messages %}
     {% if message.tags == 'error' %}
-    <div class="col-md-10 col-12 mx-auto alert alert-warning">
+    <div class="col-md-10 col-12 mx-auto alert alert-danger">
         {{ message }}
     </div>
     {% else %}
