Corrected title and image links

--- a/two_and_five_inventory_manager/inventory/templates/inventory/base.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/base.html
@@ -9,10 +9,10 @@
     <!-- Open Graph Meta Tags -->
     <meta name="description"
         content="Two and Five Inventory Manager is a comprehensive Django-based inventory management solution. Streamline your operations with features like real-time stock tracking, product information management, and advanced reporting. Optimize your inventory processes and make data-driven decisions with ease." />
-    <meta name="og:title" content="Raphael's Portfolio" />
+    <meta name="og:title" content="Two and Five Inventory Manager" />
     <meta name="og:description"
         content="Two and Five Inventory Manager is a comprehensive Django-based inventory management solution. Streamline your operations with features like real-time stock tracking, product information management, and advanced reporting. Optimize your inventory processes and make data-driven decisions with ease" />
-    <meta name="og:image" content="https://i.postimg.cc/KjJxqhVb/Inventory-Management-System.png" />
+    <meta name="og:image" content="https://i.postimg.cc/mD0ZK0Dt/Two-and-Five-Inventory-Manager.png" />
     <meta name="og:type" content="website" />
     <meta property="og:url" content="https://two-and-five-inventory-manager.onrender.com/" />
     <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.min.css" />
