--- a/two_and_five_inventory_manager/inventory/templates/inventory/navigation.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/navigation.html
@@ -27,6 +27,10 @@
                     <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
                 </li>
                 {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
+                </li>
+
             </ul>
         </div>
     </div>
