Logout link bug fix

--- a/two_and_five_inventory_manager/inventory/templates/inventory/navigation.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/navigation.html
@@ -16,7 +16,11 @@
                     <a class="nav-link" href="#">{{ user.username }}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'logout' %}">Sign Out</a>
+                    <form method="post" action="{% url 'logout' %}">
+                        {% csrf_token %}
+                        <button type="submit" class="nav-link btn btn-link py-2"
+                            style="padding: 0; border: none; background: none;">Sign Out</button>
+                    </form>
                 </li>
                 {% else %}
                 <li class="nav-item">
