--- a/two_and_five_inventory_manager/inventory/templates/inventory/index.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/index.html
@@ -1,7 +1,7 @@
 {% extends 'inventory/base.html' %}
 
 {% block content %}
-<div>
+<div class="container-fluid">
     <div class="row">
         <div class="col-sm-11 col-md-5 mx-auto mt-5 px-4">
             <h1 class="fw-light">Inventory Tracking and Management</h1>
