--- a/two_and_five_inventory_manager/inventory/templates/inventory/base.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/base.html
@@ -2,40 +2,76 @@
 
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Open Graph Meta Tags -->
-    <meta name="description"
-        content="Two and Five Inventory Manager is a comprehensive Django-based inventory management solution. Streamline your operations with features like real-time stock tracking, product information management, and advanced reporting. Optimize your inventory processes and make data-driven decisions with ease." />
+    <meta
+      name="description"
+      content="Two and Five Inventory Manager is a comprehensive Django-based inventory management solution. Streamline your operations with features like real-time stock tracking, product information management, and advanced reporting. Optimize your inventory processes and make data-driven decisions with ease."
+    />
     <meta name="og:title" content="Two and Five Inventory Manager" />
-    <meta name="og:description"
-        content="Two and Five Inventory Manager is a comprehensive Django-based inventory management solution. Streamline your operations with features like real-time stock tracking, product information management, and advanced reporting. Optimize your inventory processes and make data-driven decisions with ease" />
-    <meta name="og:image" content="https://i.postimg.cc/mD0ZK0Dt/Two-and-Five-Inventory-Manager.png" />
+    <meta
+      name="og:description"
+      content="Two and Five Inventory Manager is a comprehensive Django-based inventory management solution. Streamline your operations with features like real-time stock tracking, product information management, and advanced reporting. Optimize your inventory processes and make data-driven decisions with ease"
+    />
+    <meta
+      name="og:image"
+      content="https://i.postimg.cc/mD0ZK0Dt/Two-and-Five-Inventory-Manager.png"
+    />
     <meta name="og:type" content="website" />
-    <meta property="og:url" content="https://two-and-five-inventory-manager.onrender.com/" />
-    <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.min.css" />
+    <meta
+      property="og:url"
+      content="https://two-and-five-inventory-manager.onrender.com/"
+    />
+    <link
+      rel="stylesheet"
+      href="https://bootswatch.com/5/flatly/bootstrap.min.css"
+    />
     <!-- Favicon Links -->
-    <link rel="icon" href="{% static 'favicon_io/favicon.ico' %}" type="image/x-icon">
-    <link rel="shortcut icon" href="{% static 'favicon_io/favicon.ico' %}" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon_io/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon_io/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon_io/favicon-16x16.png' %}">
+    <link
+      rel="icon"
+      href="{% static 'favicon_io/favicon.ico' %}"
+      type="image/x-icon"
+    />
+    <link
+      rel="shortcut icon"
+      href="{% static 'favicon_io/favicon.ico' %}"
+      type="image/x-icon"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="{% static 'favicon_io/apple-touch-icon.png' %}"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="{% static 'favicon_io/favicon-32x32.png' %}"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="{% static 'favicon_io/favicon-16x16.png' %}"
+    />
 
     <title>Two and Five Inventory Manager</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- This will display the nav html in the base html at all times. -->
     {% include 'inventory/navigation.html' %}
 
     {% block content %}
+
     {% endblock content %}
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
