--- a/two_and_five_inventory_manager/inventory/templates/inventory/delete_item.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/delete_item.html
@@ -1,7 +1,7 @@
 {% extends 'inventory/base.html' %}
 
 {% block content %}
-<div>
+<div class="container-fluid">
     <a href="{% url 'dashboard' %}" class="btn btn-outline-primary my-3 mx-4">Go back</a>
     <div class="row">
         <form method="POST" class="col-sm-11 col-md-4 mx-auto mt-5">
