--- a/two_and_five_inventory_manager/inventory/templates/inventory/item_form.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/item_form.html
@@ -3,20 +3,22 @@
 
 
 {% block content %}
-<a href="{% url 'dashboard' %}" class="btn btn-outline-primary my-3 mx-4">Go Back</a>
+<div class="container-fluid">
+    <a href="{% url 'dashboard' %}" class="btn btn-outline-primary my-3 mx-4">Go Back</a>
 
-<div class="row">
-    <div class="col-11 col-md-4 mx-auto mt-5">
-        <h1>Inventory Item</h1>
+    <div class="row">
+        <div class="col-11 col-md-4 mx-auto mt-5">
+            <h1>Inventory Item</h1>
 
-        <form method="POST">
-            {% csrf_token %}
-            {{ form|crispy }}
+            <form method="POST">
+                {% csrf_token %}
+                {{ form|crispy }}
 
-            <div class="mt-3">
-                <button class="btn btn-primary">Add Item</button>
-            </div>
-        </form>
+                <div class="mt-3">
+                    <button class="btn btn-primary">Add Item</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock content %}
