--- a/two_and_five_inventory_manager/inventory/templates/inventory/dashboard.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/dashboard.html
@@ -12,7 +12,7 @@
     {% endif %}
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-12 col-12 mx-auto mt-5">
+            <div class="col-md-12 col-12 mx-auto mt-5 mb-3">
                 <div class="d-flex justify-content-end mb-3">
                     <a href="{% url 'add-item' %}" class="btn btn-primary">+</a>
                 </div>
