--- a/two_and_five_inventory_manager/inventory/templates/inventory/item_form.html
+++ b/two_and_five_inventory_manager/inventory/templates/inventory/item_form.html
@@ -14,7 +14,7 @@
                 {% csrf_token %}
                 {{ form|crispy }}
 
-                <div class="mt-3">
+                <div class="mt-3 mb-3">
                     <button class="btn btn-primary">Add Item</button>
                 </div>
             </form>
